--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     <h5 class="card-title">Product Card</h5>
                 </div>
                 <div class="card-body">
-                    <p class="card-text my-3">Total Book Count: <b></b></p>
+                    <p class="card-text my-3">Total Product Count: <b></b></p>
                 </div>
             </div>
         </a>
