--- a/ProductCatalog-Web/Areas/Admin/Views/Home/RoleManager.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/RoleManager.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Manage Roles For User</h1>
 <hr />
-<form asp-action="RoleManage" method="post">
+<form asp-action="RoleManager" method="post">
     <input type="hidden" asp-for="UserId" />
     <div class="fs-4 my-3">
         <b>User Id:</b> @Model.UserId <b><br />User Name:</b> @Model.UserName
