--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Admin Index</h1>
 <div class="row">
     <div class="col-md-4">
-        <a asp-action="GetBooks" class="text-white">
+        <a asp-action="Products" class="text-white">
             <div class="card bg-success mb-3" style="max-width: 18rem;">
                 <div class="card-header">
                     <h5 class="card-title">Product Card</h5>
