--- a/ProductCatalog-Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                        </li>
                     </ul>
                     <div class="navbar-nav d-flex">
                         @if (User.Identity.IsAuthenticated)
