--- a/ProductCatalog-Web/Views/Account/MyAccount.cshtml
+++ b/ProductCatalog-Web/Views/Account/MyAccount.cshtml
@@ -1,55 +1,53 @@
-﻿@model ProductCatolog_Core.VMs.UserVM
+﻿@model ProductCatolog_Core.VMs.ProfileVM
 
-@{
-    ViewData["Title"] = "MyAccount";
+<h2>Profil Bilgilerim</h2>
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
 }
 
-<h1>MyAccount</h1>
-
-<h4>UserVM</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="MyAccount">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<form asp-action="Profile" method="post">
+    <div class="form-group">
+        <label>Ad</label>
+        <input asp-for="FirstName" class="form-control" />
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div class="form-group">
+        <label>Soyad</label>
+        <input asp-for="LastName" class="form-control" />
+    </div>
 
+    <div class="form-group">
+        <label>E-Posta</label>
+        <input asp-for="Email" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label>Kullanıcı Adı</label>
+        <input asp-for="UserName" class="form-control" />
+    </div>
+
+    <hr />
+
+    <h3>Şifre Değiştir</h3>
+
+    <div class="form-group">
+        <label>Mevcut Şifre</label>
+        <input asp-for="CurrentPassword" type="password" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label>Yeni Şifre</label>
+        <input asp-for="NewPassword" type="password" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label>Yeni Şifre Tekrar</label>
+        <input asp-for="ConfirmNewPassword" type="password" class="form-control" />
+    </div>
+
+    <button type="submit" class="btn btn-primary mt-3">Güncelle</button>
+</form>
