--- a/ProductCatalog-Web/Views/Account/MyAccount.cshtml
+++ b/ProductCatalog-Web/Views/Account/MyAccount.cshtml
@@ -9,7 +9,7 @@
     </div>
 }
 
-<form asp-action="Profile" method="post">
+<form method="post">
     <div class="form-group">
         <label>Ad</label>
         <input asp-for="FirstName" class="form-control" />
