--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                     <h5 class="card-title"><i class="fas fa-tags"></i> Categories</h5>
                 </div>
                 <div class="card-body text-center">
-                    <h3><b></b></h3>
+                    <h3><b>@customerCount</b></h3>
                     <p>Total Categories</p>
                 </div>
             </div>
