--- a/ProductCatalog-Web/Areas/Admin/Views/Category/Edit.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Category/Edit.cshtml
@@ -12,10 +12,10 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div><div class="form-group">
+                <label asp-for="Name" class="control-label">Choose Category</label>
+                <select asp-for="Name" class="form-control" asp-items="ViewBag.Categories">
+                </select>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
