--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
     </div>
 
     <div class="col-md-3">
-        <a asp-controller="Customer" asp-action="Index" class="text-white text-decoration-none">
+        <a  asp-controller="Home" asp-action="GetCustomers" class="text-white text-decoration-none">
             <div class="card bg-primary mb-4 shadow-lg">
                 <div class="card-header text-center">
                     <h5 class="card-title"><i class="fas fa-users"></i> Customers</h5>
