--- a/ProductCatalog-Web/Areas/Admin/Views/Home/RoleManager.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/RoleManager.cshtml
@@ -4,35 +4,49 @@
     ViewData["Title"] = "RoleManager";
 }
 
-<h1>Manage Roles For User</h1>
-<hr />
-<form asp-action="RoleManager" method="post">
-    <input type="hidden" asp-for="UserId" />
-    <div class="fs-4 my-3">
-        <b>User Id:</b> @Model.UserId <b><br />User Name:</b> @Model.UserName
-    </div>
-    <hr />
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Role</th>
-                <th>Is Assigned</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var role in Model.Roles)
-            {
-                <tr>
-                    <td style="width: 10rem;">@role.RoleName</td>
-                    <td>
-                        <input type="checkbox" asp-for="Roles[Model.Roles.IndexOf(role)].IsSelected" />
-                        <input type="hidden" asp-for="Roles[Model.Roles.IndexOf(role)].RoleName" />
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <button type="submit" asp-action="GetCustomers" class="btn btn-outline-primary">Back</button>
-</form>
 
+
+<div class="container mt-5">
+    <h1 class="text-center text-primary mb-4">Manage Roles For User</h1>
+    <hr />
+
+    <form asp-action="RoleManager" method="post">
+        <input type="hidden" asp-for="UserId" />
+
+        <div class="fs-4 my-3 text-center">
+            <span class="badge bg-info text-dark fs-5">User Id: @Model.UserId</span><br />
+            <span class="badge bg-info text-dark fs-5">User Name: @Model.UserName</span>
+        </div>
+
+        <hr />
+        <table class="table table-responsive-sm table-hover table-striped">
+            <thead class="thead-light">
+                <tr>
+                    <th>Role</th>
+                    <th class="text-center">Assigned</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var role in Model.Roles)
+                {
+                    <tr>
+                        <td>@role.RoleName</td>
+                        <td class="text-center">
+                            <input type="checkbox" asp-for="Roles[Model.Roles.IndexOf(role)].IsSelected" />
+                            <input type="hidden" asp-for="Roles[Model.Roles.IndexOf(role)].RoleName" />
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+        <div class="d-flex justify-content-between mt-4">
+            <button type="submit" class="btn btn-success btn-lg w-45">
+                <i class="bi bi-save"></i> Save Changes
+            </button>
+            <button type="submit" asp-action="GetCustomers" class="btn btn-outline-secondary btn-lg w-45">
+                <i class="bi bi-arrow-left-circle"></i> Back to Customers
+            </button>
+        </div>
+    </form>
+</div>
