--- a/ProductCatalog-Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Product/Index.cshtml
@@ -33,16 +33,7 @@
                     <td>
                         <img src="~/img/@item.ImageUrl" alt="Product Image" class="img-thumbnail" style="width: 50px; height: 50px;" />
                     </td>
-                    <td>
-                        @if (item.Category != null)
-                        {
-                            @item.Category.Name
-                        }
-                        else
-                        {
-                            <span>Uncategorized</span>
-                        }
-                    </td>
+                    <td>@item.Category.Name</td>
                     <td>@item.CreatedDate.ToString("yyyy-MM-dd")</td>
                     <td>
                         <span class="badge @(item.Status == 0 ? "bg-success" : "bg-danger")">
