--- a/ProductCatalog-Web/Areas/Admin/Views/Home/GetCustomers.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/GetCustomers.cshtml
@@ -7,6 +7,10 @@
 <div class="container mt-5">
     <h1 class="text-center text-primary mb-4">Customer List</h1>
 
+    <div class="text-right mb-3">
+        <a href="@Url.Action("Index", "Role")" class="btn btn-primary">Manage Roles</a>
+    </div>
+
     <table class="table table-bordered table-striped table-hover">
         <thead class="thead-dark">
             <tr>
@@ -15,6 +19,7 @@
                 <th>@Html.DisplayNameFor(model => model.LastName)</th>
                 <th>@Html.DisplayNameFor(model => model.UserName)</th>
                 <th>@Html.DisplayNameFor(model => model.Email)</th>
+                <th>@Html.DisplayNameFor(model => model.Roles)</th>
                 <th class="text-center">Actions</th>
             </tr>
         </thead>
@@ -27,6 +32,7 @@
                     <td>@Html.DisplayFor(modelItem => item.LastName)</td>
                     <td>@Html.DisplayFor(modelItem => item.UserName)</td>
                     <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Roles)</td>
                     <td class="text-center">
                         <a href="@Url.Action("RoleManager", new { id = item.Id })" class="btn btn-warning btn-sm">Edit</a>
                         <a href="@Url.Action("Delete", new { id = item.Id })" class="btn btn-danger btn-sm ml-2">Delete</a>
