--- a/ProductCatalog-Web/Areas/Admin/Views/Home/RoleManager.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/RoleManager.cshtml
@@ -13,9 +13,9 @@
     <form asp-action="RoleManager" method="post">
         <input type="hidden" asp-for="UserId" />
 
-        <div class="fs-4 my-3 text-center">
-            <span class="badge bg-info text-dark fs-5">User Id: @Model.UserId</span><br />
-            <span class="badge bg-info text-dark fs-5">User Name: @Model.UserName</span>
+        <div class="my-3 text-center">
+            <span class="fw-bold fs-4 text-dark">User Id: <span class="text-primary">@Model.UserId</span></span><br />
+            <span class="fw-bold fs-4 text-dark">User Name: <span class="text-primary">@Model.UserName</span></span>
         </div>
 
         <hr />
