--- a/ProductCatalog-Web/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Views/Shared/_Layout.cshtml
@@ -25,9 +25,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Product</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a>
-                        </li>
+                        @if (User.IsInRole("Admin") || User.IsInRole("ContentManager"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="@(User.IsInRole("Admin") ? "Admin" : "ContentManager")"
+                                   asp-controller="Home" asp-action="Index">
+                                    @(User.IsInRole("Admin") ? "Admin Panel" : "Content Manager Panel")
+                                </a>
+                            </li>
+                        }
                     </ul>
                     <div class="navbar-nav d-flex">
                         @if (User.Identity.IsAuthenticated)
