--- a/ProductCatalog-Web/Views/Account/Login.cshtml
+++ b/ProductCatalog-Web/Views/Account/Login.cshtml
@@ -25,7 +25,7 @@
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                        <a class="small" href="password.html">Forgot Password?</a>
+                        <a class="small" asp-action="ResetPassword">Forgot Password?</a>
                         <input type="submit" value="Login" class="btn btn-primary" />
                     </div>
                 </form>
