--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
                     <h5 class="card-title"><i class="fas fa-shopping-cart"></i> Orders</h5>
                 </div>
                 <div class="card-body text-center">
-                    <h3><b></b></h3>
+                    <h3><b>@ViewBag.OrderCount</b></h3>
                     <p>Total Orders</p>
                 </div>
             </div>
