--- a/ProductCatalog-Web/Areas/ContentManager/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Areas/ContentManager/Views/Shared/_Layout.cshtml
@@ -13,17 +13,21 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="ContentManager" asp-controller="Home" asp-action="Index">Content Manager Panel</a>
+                <a class="navbar-brand" asp-area="ContentManager" asp-controller="Home" asp-action="Index">My Products</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <form id="editForm" method="post" enctype="multipart/form-data">
+                    <input type="hidden" id="ArticleId" name="Idea" value="@ViewData["Id"]" />
+                </form>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">
-                                Home Page
-                            </a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Customer Home Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="ContentManager" asp-controller="Articles" asp-action="Index">My Blogs</a>
                         </li>
                     </ul>
                     <div class="navbar-nav">
