--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -47,6 +47,7 @@
         </a>
     </div>
 
+
     <div class="col-md-3">
         <a asp-controller="Home" asp-action="GetCustomers" class="text-white text-decoration-none">
             <div class="card bg-primary mb-4 shadow-lg">
@@ -61,7 +62,7 @@
         </a>
     </div>
 
-@*     <div class="col-md-3">
+    <div class="col-md-3">
         <a asp-controller="Order" asp-action="Index" class="text-white text-decoration-none">
             <div class="card bg-danger mb-4 shadow-lg">
                 <div class="card-header text-center">
@@ -73,7 +74,7 @@
                 </div>
             </div>
         </a>
-    </div> *@
+    </div> 
 </div>
 
 @section Scripts {
