--- a/ProductCatalog-Web/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Views/Shared/_Layout.cshtml
@@ -53,6 +53,11 @@
                         }
 
                     </div>
+                    <form method="get" asp-controller="Product" asp-action="Index" class="d-flex" role="search">
+                        <input type="hidden" name="CatId" value="@Context.Request.Query["CatId"]" />
+                        <input name="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-primary" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </nav>
