--- a/ProductCatalog-Web/Areas/Admin/Views/Product/Edit.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Product/Edit.cshtml
@@ -44,8 +44,10 @@
                                 <i class="fas fa-image"></i> Upload New Image
                             </label>
                             <input type="file" name="file" class="form-control" />
+                            <input type="hidden" asp-for="ImageUrl" />
                             <span asp-validation-for="ImageUrl" class="text-danger"></span>
                         </div>
+                        
 
                         <div class="form-group mb-3">
                             <label asp-for="CategoryId" class="form-label fw-bold">
