--- a/ProductCatalog-Web/Areas/Admin/Views/Role/CreateRole.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Role/CreateRole.cshtml
@@ -21,7 +21,7 @@
     </form>
 
     <div class="mt-4">
-        <a href="@Url.Action("GetCustomers","Home")" class="btn btn-outline-secondary btn-lg w-100">
+        <a asp-action="GetCustomers" asp-controller="Home" class="btn btn-outline-secondary btn-lg w-100">
             <i class="bi bi-arrow-left-circle"></i> Back to Customers
         </a>
     </div>
