--- a/ProductCatalog-Web/Views/Articles/Index.cshtml
+++ b/ProductCatalog-Web/Views/Articles/Index.cshtml
@@ -16,51 +16,53 @@
                     <div class="card-body" style="flex: 1;">
                         <h5 class="card-title">@item.Name</h5>
                         <p class="card-text text-muted">Published on: @item.CreatedDate.ToShortDateString()</p>
-                        <a href="@Url.Action("Details", "Articles", new { id = item.Id })" class="btn btn-primary">Read More</a>
+                        <a asp-action="Details" asp-controller="Articles" asp-route-id="@item.Id" class="btn btn-primary">Read More</a>
                     </div>
                     <div>
-                    <img src="~/img/@item.ImageUrl1" alt="Product Image" class="img-thumbnail" style="width: 200px; height: 200px;" />
+                        <img src="~/img/@item.ImageUrl1" alt="Product Image" class="img-thumbnail" style="width: 200px; height: 200px;" />
                     </div>
                 </div>
             </div>
         }
     </div>
 </div>
-<style>
-    .container {
-        margin-top: 50px;
-    }
 
-    .card {
-        border: none;
-        border-radius: 10px;
-        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    .card-body {
-        background-color: #f8f9fa;
-        padding: 20px;
-    }
-
-    .card-title {
-        font-size: 1.5rem;
-        font-weight: bold;
-    }
-
-    .card-text {
-        font-size: 1rem;
-        color: #555;
-    }
-
-    .btn-primary {
-        background-color: #007bff;
-        border-color: #007bff;
-        font-weight: bold;
-    }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #0056b3;
+@section Styles {
+    <style>
+        .container {
+            margin-top: 50px;
         }
-</style>
 
+        .card {
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-body {
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
+
+        .card-title {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .card-text {
+            font-size: 1rem;
+            color: #555;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            font-weight: bold;
+        }
+
+            .btn-primary:hover {
+                background-color: #0056b3;
+                border-color: #0056b3;
+            }
+    </style>
+}
